Fix alignment

--- a/webapp/app-styles/fraTable.less
+++ b/webapp/app-styles/fraTable.less
@@ -28,6 +28,11 @@
   border: 1px solid #CCCCCC;
 }
 
+.fra-table__text-readonly-cell-align-right {
+  .fra-table__text-readonly-cell;
+  text-align: right;
+}
+
 .fra-table__input {
   color: inherit;
   font-size: inherit;
